--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ description: 梵加索的博客是一个好地方！
 keywords: 梵加索,梵加索博客,梵加索的博客
 author: 梵加索
 language: zh-CN
-timezone:
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://blog.fangaso.com
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :id.html
 permalink_defaults:
 
 # Directory
