--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://blog.fangaso.com
 root: /
-permalink: :year:month:day:hour:minute:second
+permalink: :year:month:day:hour:minute:second.html
 permalink_defaults:
 
 # Directory
