--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -31,7 +31,7 @@ site:
     width: 40
     height: 40
     url: ../images/logo.png
-  title: Hexo # 页面title
+  title: 梵加索的博客 # 页面title
   favicon: /favicon.png
   board: <p>欢迎交流与分享经验!</p> # 站点公告
   copyright: false # 底部版权信息
@@ -188,9 +188,9 @@ profile:
   avatar: images/avatar.jpg
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
   author: 昵称
-  author_title: Web Developer & Designer
+  author_title: 码农
   author_description: 个人简介。
-  location: Shenzhen, China
+  location: 中国山东菏泽市曹县
   follow: https://github.com/cofess
   # Social Links
   social:
