--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -108,7 +108,7 @@ github:
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
 comment:
-  type: gitalk  # 启用哪种评论系统
+  type: valine  # 启用哪种评论系统
   disqus:  # enter disqus shortname here
   youyan: 
     uid: 1783844 # enter youyan uid 
@@ -127,8 +127,8 @@ comment:
     ClientID: 5a1679f74549de157abb #必须. GitHub Application Client ID.
     ClientSecret: 04d7f71fce30cf712174b40fd917bed26daaebe1 #必须. GitHub Application Client Secret.
   valine: # Valine. https://valine.js.org
-    appid:  # your leancloud application appid
-    appkey:  # your leancloud application appkey
+    appid: Nt5UNK6pr7g2JJeu5LtCEy0J-MdYXbMMI # your leancloud application appid
+    appkey: Lyi99MjUXL4GVBg6peqDkLa9 # your leancloud application appkey
     notify: false # mail notifier , https://github.com/xCss/Valine/wiki
     verify: false # Verification code
     placeholder: Just go go # comment box placeholder
