--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -131,7 +131,7 @@ comment:
     appkey: Lyi99MjUXL4GVBg6peqDkLa9 # your leancloud application appkey
     notify: false # mail notifier , https://github.com/xCss/Valine/wiki
     verify: false # Verification code
-    placeholder: Just go go # comment box placeholder
+    placeholder: 说点什么吧 # comment box placeholder
     avatar: mm # gravatar style
     meta: nick,mail,link # custom comment header
     pageSize: 10 # pagination size
@@ -165,7 +165,7 @@ pv:
         
 # wordcount
 postCount:
-  enable: false
+  enable: true
   wordcount: true  # 文章字数统计
   min2read: true  # 阅读时长预计 
 
