--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -108,7 +108,7 @@ github:
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
 comment:
-  type: gitalk  # 启用哪种评论系统
+  type: valine  # 启用哪种评论系统
   disqus:  # enter disqus shortname here
   youyan: 
     uid: 1783844 # enter youyan uid 
@@ -165,7 +165,7 @@ pv:
         
 # wordcount
 postCount:
-  enable: true
+  enable: false
   wordcount: true  # 文章字数统计
   min2read: true  # 阅读时长预计 
 
