--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -187,7 +187,7 @@ profile:
   enabled: true # Whether to show profile bar
   avatar: images/avatar.jpg
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-  author: 昵称
+  author: 梵加索
   author_title: 码农
   author_description: 个人简介。
   location: 中国山东菏泽市曹县
