--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -159,7 +159,7 @@ pv:
   busuanzi:
     enable: false  # 不蒜子统计
   leancloud:
-    enable: true  # leancloud统计
+    enable: false  # leancloud统计
     app_id: Nt5UNK6pr7g2JJeu5LtCEy0J-MdYXbMMI # leancloud <AppID>
     app_key: Lyi99MjUXL4GVBg6peqDkLa9 # leancloud <AppKey>
         
