--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ timezone: Asia/Shanghai
 # URL
 url: https://blog.fangaso.com
 root: /
-permalink: :id.html
+permalink: :hash.html
 permalink_defaults:
 
 # Directory
