--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ highlight:
   auto_detect: false
   tab_replace:
   
-# Home page setting 
+# Home page setting 主页设置
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
@@ -48,12 +48,12 @@ index_generator:
   per_page: 10
   order_by: -date
   
-# Category & Tag
+# Category & Tag 分类和标签
 default_category: uncategorized
 category_map:
 tag_map:
 
-# Date / Time format
+# Date / Time format 时
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
