--- a/_config.yml
+++ b/_config.yml
@@ -53,14 +53,14 @@ default_category: uncategorized
 category_map:
 tag_map:
 
-# Date / Time format 时
+# Date / Time format 日期/时间格式
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
 
-# Pagination
+# Pagination 页码
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
