--- a/_config.yml
+++ b/_config.yml
@@ -65,9 +65,7 @@ time_format: HH:mm:ss
 per_page: 10
 pagination_dir: page
 
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
+# Extensions 扩展
 theme: pure
 
 # Deployment
