--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ i18n_dir: :lang
 skip_render:
 
 # Writing 撰写
-new_post_name: :title.md # File name of new posts
+new_post_name: :title.md # 新文件名称
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
